@@ -197,9 +197,8 @@ CDEFS += -DAUX_LINE_MASK="(1 << 4)"
 CDEFS += -DVTARGET_ADC_CHANNEL=2
 CDEFS += -DENABLE_ISP_PROTOCOL
 CDEFS += -DENABLE_XPROG_PROTOCOL
-#CDEFS += -DXPROG_VIA_HARDWARE_USART
 #CDEFS += -DNO_VTARGET_DETECT
-#CDEFS += -DLIBUSB_FILTERDRV_COMPAT
+#CDEFS += -DLIBUSB_DRIVER_COMPAT
 
 
 # Place -D or -U options here for ASM sources
